--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
+    "heroku-logger": "^0.1.4",
     "moment": "^2.18.1",
     "mongoose": "^4.11.9",
     "morgan": "^1.7.0",
