--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pug": "^2.0.0-beta6",
     "recastai": "^3.4.1",
     "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
