--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
+    "deasync": "^0.1.10",
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "heroku-logger": "^0.1.4",
