--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "recastai": "^3.4.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
